<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/acctab">

        <EditTextPreference
            android:id="@+id/custname"
            android:key="cust_name"
            android:title="Customer Name"
            android:summary="@string/name_sum"
            android:dialogTitle="@string/dialog_title"
            android:dialogMessage="@string/input_name"

            android:inputType="text"
            />

        <EditTextPreference
            android:key="cust_password"
            android:title="Password"
            android:dialogTitle="@string/password"
            android:dialogMessage="@string/input_password"

            android:inputType="textPassword"
            android:password="true"
            />


        <EditTextPreference
            android:key="email_address"
            android:title="Email"
            android:dialogTitle="@string/email"
            android:dialogMessage="@string/input_email"
            android:summary="@string/email_sum"
            android:inputType="textEmailAddress"
            />

        <CheckBoxPreference
            android:key="member_checkbox"
            android:title="Loyalty Member"
            android:defaultValue="false"
            />

    </PreferenceCategory>





</PreferenceScreen>