<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!--
        <TextView
            android:id="@+id/infotab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Order Tab 3 "/>
                                                -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <EditText android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType= "textPersonName" />

        <TextView

            android:text="@string/toppings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="Pepperoni"/>

        <CheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/extracheese"/>

        <CheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/onions"/>

        <CheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/checkbox_padding"
            android:text="@string/mushrooms"/>


        <TextView

            android:text="@string/Toppings_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sum_text" />


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"></TextView>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView

                android:text="@string/quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <Spinner
                android:id="@+id/spinnerInputType"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:gravity="start"
                android:textColor="#009698"

                >
            </Spinner>



        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/summary"
                android:text="@string/summary"
                android:textColor="#FFF"
                android:layout_marginRight="16dp"
                android:background="#7A1EA1"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:id="@+id/order"
                android:text="@string/order"
                android:textColor="#FFF"
                android:background="#7A1EA1"/>

        </LinearLayout>

    </LinearLayout>


</ScrollView>